<resources>
    <string name="app_name">TwoActivityApp</string>
    <string name="send">Send</string>
    <string name="reply">Reply</string>
    <string name="message_received">Message Received</string>
    <string name="reply_received">Reply Received</string>
    <string name="enter_your_message_here">Enter Your Message Here</string>
    <string name="enter_your_reply_here">Enter Your Reply Here</string>
    <string name="name_text">Name text</string>
    <string name="sex_text">Sex text</string>
    <string name="age_text">Age Text</string>
    <string name="num">1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>